Bug 65569 - UI LibreOffice native file dialog does not offer selection list to choose from names that have the same start
Summary: UI LibreOffice native file dialog does not offer selection list to choose fro...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.1.0.1 target:4.2.0
Keywords: regression
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-06-09 12:52 UTC by Cor Nouws
Modified: 2013-06-14 21:10 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2013-06-09 12:52:03 UTC
folder test with file foo.odt and foo1.odt and foo2.odt
Tools > Options > General ... Use LibreOffice dialogs ON

File > Open
field filename type fo
 > foo.odt is shown
 > no way to choose foo1 etc without typing
in older versions there was automatically the dropdownlist showing files which names have the same start
Comment 1 Cor Nouws 2013-06-09 12:53:59 UTC
was OK in 400alpha1
not OK in 400beta1

confirmed on Windows
Comment 2 Michael Meeks 2013-06-10 08:57:45 UTC
Any thoughts Cedric ? :-)
Comment 3 Stephan Bergmann 2013-06-14 16:31:48 UTC
So the problem is that there is no longer that triangle-labeled dropdown list button at the right of the "File name" edit field?  That appears to be a regression introduced with <http://cgit.freedesktop.org/libreoffice/core/commit/?id=a8c2cb0e6d0b9b301887be176694592f8ecda0c4> "SvtURLBox derives from ComboBox not Edit."
Comment 4 Cor Nouws 2013-06-14 18:18:02 UTC
(In reply to comment #3)
> So the problem is that there is no longer that triangle-labeled dropdown
> list button at the right of the "File name" edit field?  

Well, not that I use that dropdown button - I just type and use ALt+Down - but it will be related to the missing behaviour, obviously.
Comment 5 Caolán McNamara 2013-06-14 19:37:14 UTC
bah, different defaults on the different ctors
Comment 6 Commit Notification 2013-06-14 19:39:39 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4e9f9b745fdf87bce2e2cc286849989364c3bd30&h=libreoffice-4-1

Resolves: fdo#65569 dropdown list missing from built-in fpicker


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2013-06-14 19:39:57 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6a4e3194bb16b595885e2814c92ace8911f9a5f3

Resolves: fdo#65569 dropdown list missing from built-in fpicker



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Cor Nouws 2013-06-14 21:10:14 UTC
thanks :)