Resolves: fdo#65569 dropdown list missing from built-in fpicker

regression since a8c2cb0e6d0b9b301887be176694592f8ecda0c4
the different ctors have different defaults around whether
they show the dropdown or not.

Change-Id: I3d1bb423c8a25b81ffb26981b63af7498f99e70a
(cherry picked from commit 6a4e3194bb16b595885e2814c92ace8911f9a5f3)